--- a/Intro to Python Data Structures/Python Data Structures.ipynb
+++ b/Intro to Python Data Structures/Python Data Structures.ipynb
@@ -47,20 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "omp\n",
-      "opt\n",
-      "puter\n",
-      "compu\n",
-      "r\n",
-      "ter\n",
-      "comput\n"
+      "omp\nopt\nputer\ncompu\nr\nter\ncomput\nretupmoc\n"
      ]
     }
    ],
@@ -72,7 +66,8 @@
     "print(x[:5])\n",
     "print(x[-1])\n",
     "print(x[-3:])\n",
-    "print(x[:-2])"
+    "print(x[:-2])\n",
+    "print(x[::-1])"
    ]
   },
   {
@@ -84,15 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "horseshoe\n",
-      "['pig', 'cow', 'horse']\n"
+      "horseshoe\n['pig', 'cow', 'horse']\n('kevin', 'nik', 'jen', 'craig')\n"
      ]
     }
    ],
@@ -103,7 +97,11 @@
     "\n",
     "# list\n",
     "y = ['pig', 'cow'] + ['horse']\n",
-    "print(y)"
+    "print(y)\n",
+    "\n",
+    "# touple\n",
+    "z = ('kevin','nik', 'jen') + ('craig',)\n",
+    "print(z)"
    ]
   },
   {
@@ -115,15 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "bugbugbug\n",
-      "[8, 5, 8, 5, 8, 5]\n"
+      "bugbugbug\n[8, 5, 8, 5, 8, 5]\n"
      ]
     }
    ],
@@ -165,7 +162,11 @@
     "\n",
     "# list\n",
     "y = ['pig', 'cow', 'horse']\n",
-    "print('cow' not in y)"
+    "print('cow' not in y)\n",
+    "\n",
+    "# tuple\n",
+    "z = ('kevin','nik', 'jen','craig')\n",
+    "print('jen' in z)"
    ]
   },
   {
@@ -1074,9 +1075,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python2716jvsc74a57bd0545e036c4b32438aced1f6b3c8d38ca151d9c36189e05839cb0aa568fda70ddd",
+   "display_name": "Python 2.7.16 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1088,7 +1088,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "2.7.16-final"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "545e036c4b32438aced1f6b3c8d38ca151d9c36189e05839cb0aa568fda70ddd"
+   }
   }
  },
  "nbformat": 4,
